--- a/styles.css
+++ b/styles.css
@@ -127,18 +127,19 @@ nav ul li a {
     padding: 0.8rem 1.5rem;
     border-radius: 50px;
     overflow: hidden;
+    display: block;
 }
 
 nav ul li a::before {
     content: '';
     position: absolute;
     top: 0;
-    left: -100%;
+    left: 0;
     width: 100%;
     height: 100%;
     background: linear-gradient(90deg, transparent, var(--primary-green), transparent);
-    opacity: 0.1;
-    transition: left 0.6s ease;
+    opacity: 0;
+    transition: opacity 0.6s ease;
 }
 
 nav ul li a::after {
@@ -161,7 +162,7 @@ nav ul li a:hover {
 }
 
 nav ul li a:hover::before {
-    left: 100%;
+    opacity: 0.1;
 }
 
 nav ul li a:hover::after {
